--- a/spring-boot-data-jpa/src/main/resources/application.properties
+++ b/spring-boot-data-jpa/src/main/resources/application.properties
@@ -1,5 +1,14 @@
-spring.datasource.url=jdbc:h2:mem:dbclientes
-spring.datasource.username=andres
-spring.datasource.password=sa
-spring.datasource.dbcp2.driver-class-name=org.h2.Driver
-spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:dbclientes
+#spring.datasource.username=andres
+#spring.datasource.password=sa
+#spring.datasource.dbcp2.driver-class-name=org.h2.Driver
+#spring.h2.console.enabled=true
+spring.datasource.url=jdbc:mysql://localhost/db_springboot?serverTimezone=America/Mexico_City&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=2120
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+#Desarrollo
+spring.jpa.hibernate.ddl-auto=create-drop
+#Ver consultas en terminal 		
+logging.level.org.hibernate.SQL=debug
