--- a/spring-boot-data-jpa/src/main/resources/application.properties
+++ b/spring-boot-data-jpa/src/main/resources/application.properties
@@ -3,6 +3,8 @@
 #spring.datasource.password=sa
 #spring.datasource.dbcp2.driver-class-name=org.h2.Driver
 #spring.h2.console.enabled=true
+
+#BD
 spring.datasource.url=jdbc:mysql://localhost/db_springboot?serverTimezone=America/Mexico_City&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=2120
@@ -12,3 +14,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
 #Ver consultas en terminal 		
 logging.level.org.hibernate.SQL=debug
+
+#Carga de archivos version de spring > 2
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB 
